# AS-1-Next

./: .gitignore  CLAUDE.md  CMakeLists.txt
.github/workflows/: build.yml
RetroAS1/: 000 Clarion Call.ras  001 Keith Brass.ras  002 303 State.ras  003 RezoKizz Bass.ras  004 Monolithic Strings.ras  005 Alaska.ras  006 Evolution.ras  007 Upper Octave Org.ras  008 909 Kick.ras  009 Let It Evolve.ras  010 Elastica Pad.ras  011 70's Fusion Lead.ras  012 Press TB303.ras  013 Class Brass 5ths.ras  014 Fat Mini.ras  015 Orchestral Strings.ras  016 Pro One Sync.ras  017 Pulse Cloud.ras  018 The Enveloper.ras  019 DX Mallet.ras  020 P5-Rising Chimes.ras  021 Pluck Pad.ras  022 Tubular.ras  023 Organica Lead.ras  024 Rave E Lation.ras  025 Trombone.ras  026 303_Flanger.ras  027 Beautiful Cello.ras  028 Super Jupiter.ras  029 Slow Ramp.ras  030 Harpsi.ras  031 909 Snare.ras  032 Poly-Mod Sweep.ras  033 Pulse Circuit.ras  034 Somewhat Asian.ras  035 Primative Lead.ras  036 Minor House Stab.ras  037 An-Pay Ipe-Pay.ras  038 Env Follower Bass.ras  039 ARP String Machine.ras  (+88 more)
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/dsp/: Adsr.h  BiquadLowpass.h  DelayEffect.h  Lfo.h  ModMatrix.h  MultiModeFilter.h  Parameters.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h
Source/gui/: AS1LookAndFeel.cpp  AS1LookAndFeel.h  BackgroundArt.cpp  BackgroundArt.h  ImageBlur.h  KnobView.h  ModMatrixEditor.cpp  ModMatrixEditor.h  PresetBrowser.cpp  PresetBrowser.h  SectionPanel.h
Source/presets/: PresetManager.cpp  PresetManager.h  RasParser.cpp  RasParser.h  RasPreset.h
Tools/: RenderMain.cpp  SnapshotMain.cpp
cmake/: toolchain-clang-cl-x86_64.cmake  toolchain-mingw-w64-x86_64.cmake
