cmake_minimum_required(VERSION 3.22)

project(AS1Next VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 26)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# MSVC assumes the system codepage for un-BOMed sources; the GUI sources
# contain UTF-8 literals (e.g. the mod-matrix "→"), so force UTF-8 everywhere.
if(MSVC)
    add_compile_options(/utf-8)
endif()

# C++26 removed std::wstring_convert / std::codecvt_utf8_utf16 (P2871), which the
# bundled Steinberg VST3 SDK still uses. libstdc++ (Linux) keeps them as
# deprecated, but the newer libc++ shipping with recent Apple/LLVM clang deletes
# them outright, so the VST3 target fails to compile on macOS. libc++'s
# escape-hatch macros bring the removed pieces back; they are libc++-specific and
# ignored by other standard libraries, so it is safe to define them unconditionally.
add_compile_definitions(
    _LIBCPP_ENABLE_CXX26_REMOVED_FEATURES
    _LIBCPP_ENABLE_CXX26_REMOVED_CODECVT
    _LIBCPP_ENABLE_CXX26_REMOVED_WSTRING_CONVERT
)

include(FetchContent)
FetchContent_Declare(
    JUCE
    GIT_REPOSITORY https://github.com/juce-framework/JUCE.git
    GIT_TAG        8.0.15
    GIT_SHALLOW    TRUE
)
FetchContent_MakeAvailable(JUCE)

juce_add_binary_data(AS1NextAssets
    SOURCES
        icons/logo_trimmed.png
        icons/background_processed.png
        icons/onoff.png
        icons/search.png
        icons/arrow.png
        icons/favorite-on.png
        icons/favorite-off.png
        icons/Nunito-Regular.ttf
)
set_target_properties(AS1NextAssets PROPERTIES POSITION_INDEPENDENT_CODE ON)

# The VST3 moduleinfo.json is generated by running a helper built for the
# TARGET platform — impossible when cross-compiling (e.g. the Windows build on
# Linux). Hosts fall back to scanning the module's exports, so skip it there.
if(CMAKE_CROSSCOMPILING)
    set(AS1_VST3_MANIFEST FALSE)
else()
    set(AS1_VST3_MANIFEST TRUE)
endif()

juce_add_plugin(AS1Next
    PRODUCT_NAME            "AS-1 Next"
    VST3_AUTO_MANIFEST       ${AS1_VST3_MANIFEST}
    COMPANY_NAME             "monsler"
    PLUGIN_MANUFACTURER_CODE Msnr
    PLUGIN_CODE              As1n
    FORMATS                  VST3 Standalone
    VST3_CATEGORIES           Instrument Synth
    IS_SYNTH                 TRUE
    NEEDS_MIDI_INPUT          TRUE
    NEEDS_MIDI_OUTPUT         FALSE
    IS_MIDI_EFFECT            FALSE
    EDITOR_WANTS_KEYBOARD_FOCUS TRUE
    COPY_PLUGIN_AFTER_BUILD  FALSE
)

target_sources(AS1Next PRIVATE
    Source/PluginProcessor.cpp
    Source/PluginEditor.cpp
    Source/presets/RasParser.cpp
    Source/presets/PresetManager.cpp
    Source/dsp/SynthVoice.cpp
    Source/gui/AS1LookAndFeel.cpp
    Source/gui/BackgroundArt.cpp
    Source/gui/PresetBrowser.cpp
    Source/gui/ModMatrixEditor.cpp
)

target_include_directories(AS1Next PRIVATE
    Source
)

target_compile_definitions(AS1Next PUBLIC
    JUCE_WEB_BROWSER=0
    JUCE_USE_CURL=0
    JUCE_VST3_CAN_REPLACE_VST2=0
    JUCE_DISPLAY_SPLASH_SCREEN=0
    AS1_PRESET_DIR="${CMAKE_CURRENT_SOURCE_DIR}/RetroAS1"
)

target_link_libraries(AS1Next PRIVATE
    AS1NextAssets
    juce::juce_audio_utils
    juce::juce_dsp
    juce::juce_audio_processors
    juce::juce_gui_basics
    juce::juce_recommended_config_flags
    juce::juce_recommended_lto_flags
    juce::juce_recommended_warning_flags
)

# Headless GUI snapshot tool (Tools/SnapshotMain.cpp): renders the editor
# offscreen and writes PNGs of every tab, for checking layout without a DAW.
juce_add_gui_app(AS1Snapshot PRODUCT_NAME "AS1Snapshot")
# Plain main() console entry (also when cross-built for Windows, where the GUI
# subsystem would otherwise demand a WinMain).
set_target_properties(AS1Snapshot PROPERTIES WIN32_EXECUTABLE FALSE)
target_sources(AS1Snapshot PRIVATE
    Tools/SnapshotMain.cpp
    Source/PluginProcessor.cpp
    Source/PluginEditor.cpp
    Source/presets/RasParser.cpp
    Source/presets/PresetManager.cpp
    Source/dsp/SynthVoice.cpp
    Source/gui/AS1LookAndFeel.cpp
    Source/gui/BackgroundArt.cpp
    Source/gui/PresetBrowser.cpp
    Source/gui/ModMatrixEditor.cpp
)
target_include_directories(AS1Snapshot PRIVATE Source)
target_compile_definitions(AS1Snapshot PRIVATE
    JUCE_WEB_BROWSER=0
    JUCE_USE_CURL=0
    JUCE_DISPLAY_SPLASH_SCREEN=0
    JUCE_MODAL_LOOPS_PERMITTED=1
    JucePlugin_Name="AS-1 Next"
    AS1_PRESET_DIR="${CMAKE_CURRENT_SOURCE_DIR}/RetroAS1"
)
target_link_libraries(AS1Snapshot PRIVATE
    AS1NextAssets
    juce::juce_audio_utils
    juce::juce_dsp
    juce::juce_audio_processors
    juce::juce_gui_basics
    juce::juce_recommended_config_flags
)

# Headless offline audio-render harness (Tools/RenderMain.cpp): plays each
# preset and reports level/brightness so DSP/parser regressions are catchable
# without a DAW or speakers.
juce_add_console_app(AS1Render PRODUCT_NAME "AS1Render")
set_target_properties(AS1Render PROPERTIES WIN32_EXECUTABLE FALSE)
target_sources(AS1Render PRIVATE
    Tools/RenderMain.cpp
    Source/PluginProcessor.cpp
    Source/PluginEditor.cpp
    Source/presets/RasParser.cpp
    Source/presets/PresetManager.cpp
    Source/dsp/SynthVoice.cpp
    Source/gui/AS1LookAndFeel.cpp
    Source/gui/BackgroundArt.cpp
    Source/gui/PresetBrowser.cpp
    Source/gui/ModMatrixEditor.cpp
)
target_include_directories(AS1Render PRIVATE Source)
target_compile_definitions(AS1Render PRIVATE
    JUCE_WEB_BROWSER=0
    JUCE_USE_CURL=0
    JUCE_DISPLAY_SPLASH_SCREEN=0
    JUCE_MODAL_LOOPS_PERMITTED=1
    JucePlugin_Name="AS-1 Next"
    AS1_PRESET_DIR="${CMAKE_CURRENT_SOURCE_DIR}/RetroAS1"
)
target_link_libraries(AS1Render PRIVATE
    AS1NextAssets
    juce::juce_audio_utils
    juce::juce_audio_formats
    juce::juce_dsp
    juce::juce_audio_processors
    juce::juce_gui_basics
    juce::juce_recommended_config_flags
)
